--- a/packages/modal-infra/pyproject.toml
+++ b/packages/modal-infra/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "httpx>=0.27.0",
     "websockets>=13.0",
     "pydantic>=2.0",
+    "PyJWT>=2.8.0",
+    "fastapi>=0.115.0",
+    "cryptography>=43.0.0",
 ]
 
 [project.optional-dependencies]
