Add AI coding assistant directories to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,36 @@ coverage/
 # Sisyphus (keep plans but ignore temp files)
 .sisyphus/notepads/
 .sisyphus/boulder.json
+
+# AI Coding Assistants
+.agent/
+.agents/
+.claude/
+.cline/
+.codebuddy/
+.codex/
+.commandcode/
+.continue/
+.crush/
+.cursor/
+.factory/
+.gemini/
+.goose/
+.junie/
+.kilocode/
+.kiro/
+.kode/
+.mcpjam/
+.mux/
+.neovate/
+.opencode/
+.openhands/
+.pi/
+.pochi/
+.qoder/
+.qwen/
+.roo/
+.trae/
+.windsurf/
+.zencoder/
+skills/
