Configure production WebSocket URLs and document deployment steps
Fixed WebSocket error by setting CONTROL_PLANE_URL and NEXT_PUBLIC_WS_URL to production endpoints in wrangler.jsonc. Updated CLAUDE.md with comprehensive deployment guide including prerequisites, step-by-step instructions, secrets management, and environment variable configuration for all components (Web, Control Plane, Slack Bot, Modal).

--- a/packages/web/wrangler.jsonc
+++ b/packages/web/wrangler.jsonc
@@ -23,7 +23,9 @@
 
   // Environment variables (non-secret)
   "vars": {
-    "DEPLOYMENT_NAME": "dispatch"
+    "DEPLOYMENT_NAME": "dispatch",
+    "CONTROL_PLANE_URL": "https://dispatch-api.national-design-studio-development.workers.dev",
+    "NEXT_PUBLIC_WS_URL": "wss://dispatch-api.national-design-studio-development.workers.dev"
   }
 
   // Secrets (set via: wrangler secret put <KEY>)
