--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "packageManager": "bun@1.3.5",
   "engines": {
     "node": ">=20.0.0"
+  },
+  "dependencies": {
+    "next-themes": "^0.4.6"
   }
 }
