--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,14 +21,26 @@
   },
   "dependencies": {
     "@dispatch/shared": "workspace:*",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@streamdown/code": "^1.0.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "better-auth": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
-    "next": "^15.1.4",
+    "lucide-react": "^0.563.0",
+    "next": "^16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "streamdown": "^2.1.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -41,7 +53,7 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.7.2",
     "vitest": "^4.0.17",
     "wrangler": "^3.99.0"
