Fix question card submission hang and add session management features
- Fix race condition in question answer submission by emitting completed event immediately
- Merge tool_call events to preserve original args (like questions) when updating status
- Add context menu for session management with archive/unarchive/delete options
- Archive sessions now stop sandbox to free resources and hide from main sidebar
- Archived sessions appear in collapsible section at bottom
- Add select-none to sidebar items to prevent text highlighting

--- a/packages/control-plane/wrangler.jsonc
+++ b/packages/control-plane/wrangler.jsonc
@@ -43,6 +43,14 @@
   // Environment variables (non-secret)
   "vars": {
     "DEPLOYMENT_NAME": "dispatch"
+  },
+
+  // Observability
+  "observability": {
+    "logs": {
+      "enabled": true,
+      "invocation_logs": true
+    }
   }
 
   // Secrets (set via: wrangler secret put <KEY>)
