Add nested subagent tool display and auto-expand behavior
- Add TaskCallItem component for dedicated Task/Agent tool rendering
- Pass metadata.summary through bridge for nested tool calls
- Fix dedup logic to send Task tool updates when summary changes
- Auto-expand Task tools while running, collapse when complete
- Add ToolCallSummary type for nested tool call metadata
- Update production WebSocket URLs in wrangler configs
- Add debug logging for Task tool events (temporary)

--- a/packages/control-plane/wrangler.jsonc
+++ b/packages/control-plane/wrangler.jsonc
@@ -42,7 +42,8 @@
 
   // Environment variables (non-secret)
   "vars": {
-    "DEPLOYMENT_NAME": "dispatch"
+    "DEPLOYMENT_NAME": "dispatch",
+    "WORKER_URL": "https://dispatch-api.based.ceo"
   },
 
   // Observability
