Fix question card submission hang and add session management features (#9)
* Fix question card submission hang and add session management features

- Fix race condition in question answer submission by emitting completed event immediately
- Merge tool_call events to preserve original args (like questions) when updating status
- Add context menu for session management with archive/unarchive/delete options
- Archive sessions now stop sandbox to free resources and hide from main sidebar
- Archived sessions appear in collapsible section at bottom
- Add select-none to sidebar items to prevent text highlighting

* Add auto-collapsing message chains and centralize tool icons

- Add MessageChain component that auto-collapses completed agentic loops
- Show collapsed summary with tool call count and tool type icons
- Final message always remains visible even when collapsed
- Create centralized tool-icons.tsx utility for consistent icon mapping
- Update tool-call-group and tool-call-item to use centralized icons
- Add composer, conversation, and prompt-input component structure
- Update session page with groupIntoMessageChains for proper rendering

* Add nested subagent tool display and auto-expand behavior

- Add TaskCallItem component for dedicated Task/Agent tool rendering
- Pass metadata.summary through bridge for nested tool calls
- Fix dedup logic to send Task tool updates when summary changes
- Auto-expand Task tools while running, collapse when complete
- Add ToolCallSummary type for nested tool call metadata
- Update production WebSocket URLs in wrangler configs
- Add debug logging for Task tool events (temporary)

* Remove debug logging and fix question tool detection

- Remove DEBUG print/console.log statements from bridge.py,
  use-session-socket.ts, and task-call-item.tsx
- Replace fragile includes("question") pattern with explicit allowlist
  for question tool detection in durable-object.ts
- Add missing ServerMessage types for question_answer_queued and
  questi

--- a/packages/control-plane/wrangler.jsonc
+++ b/packages/control-plane/wrangler.jsonc
@@ -42,7 +42,16 @@
 
   // Environment variables (non-secret)
   "vars": {
-    "DEPLOYMENT_NAME": "dispatch"
+    "DEPLOYMENT_NAME": "dispatch",
+    "WORKER_URL": "https://dispatch-api.based.ceo"
+  },
+
+  // Observability
+  "observability": {
+    "logs": {
+      "enabled": true,
+      "invocation_logs": true
+    }
   }
 
   // Secrets (set via: wrangler secret put <KEY>)
