--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,7 @@
       "outputs": ["dist/**", ".next/**", "!.next/cache/**", ".open-next/**"]
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"]
+      "dependsOn": ["^build"]
     },
     "lint": {
       "dependsOn": ["^lint"]
